--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,8 @@ body {
     width: 20%;
     padding: 20px;
     text-align: center;
+    border-radius: 20px 40px;
+    box-shadow: 50% ;
 }
 
 .counter-body .box-counter .counter {
