--- a/src/css/array.css
+++ b/src/css/array.css
@@ -5,3 +5,21 @@
 .cardJsx {
     background-color: rgb(201, 205, 208);
 }
+
+span {
+    margin-right: 10%;
+}
+
+.areaRett {
+    background-color: rgb(200, 188, 224);
+    padding: 2% 5%;
+    border-radius: 10px;
+    margin: 10px 0;
+}
+
+.areaTri {
+    background-color: rgb(224, 188, 200);
+    padding: 2% 5%;
+    border-radius: 10px;
+    margin: 10px 0;
+}
