--- a/src/css/input.css
+++ b/src/css/input.css
@@ -22,3 +22,10 @@ input {
     border-radius: 10px 20px;
     padding: 15px;
 }
+
+.box-width {
+    background-color: rgb(73, 73, 161);
+    border: 1px dashed white;
+    height: 100px;
+    width: 100px;
+}
