--- a/src/css/app2.css
+++ b/src/css/app2.css
@@ -11,6 +11,9 @@
     border-radius: 20px;
     padding: 3% 2%;
     box-shadow: 5px 4px 8px rgba(0, 0, 0, 0.5);
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
 .counterApp {
